[FIX] update message position mobile

--- a/update/templates/update.css
+++ b/update/templates/update.css
@@ -113,12 +113,11 @@ select {
 }
 
 .progressbar-container {
-	
 	margin: 10px auto;
 	width: 90%;
 }
 
-.progressbar[style*="100"]{
+.progressbar[style*="100"] {
 	border-radius: 3px;
 }
 
@@ -285,6 +284,7 @@ article {
 	opacity: 1;
 	top: 50%;
 	left: 50%;
+	transform: translateX(-50%);
 	line-height: 1;
 	margin-left: -0.5em;
 	margin-top: -0.5em;
